--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "serialport": "^12.0.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "start": "^5.1.0"
   }
 }
